# multifidelity-NPE

./: .gitignore  README.md  eval.py  eval_lf_hf_distance.py  pyproject.toml  quick_script.py  sbibmtest.py  train.py
mf_npe/: __main__.py  evaluation.py  mse.py  one_experiment.py  pipeline.py  task.json  task_setup.py
mf_npe/benchmarking/: c2st_sbi.py
mf_npe/config/: TaskSetup.py  plot.py
mf_npe/diagnostics/: histogram.py  mse.py  pairplots.py  ppc.py  sbc.py
mf_npe/flows/: RatioNet.py  additional_transformations_theta.py  additional_transformations_x.py  build_flows.py  customOrderNSF.py  custom_ensemble_posterior.py  discriminator.py  embedding.py  train_flows.py
mf_npe/fsbi/: analyse.py  density_estimator.py
mf_npe/fsbi/simulator/: simulator.py
mf_npe/fsbi/utils/: fit_npe.py  visualize.py
mf_npe/methods/: active_mf_tsnpe.py  embedding.py  helpers.py  mf_abc.py  mf_npe.py  mf_tsnpe.py  npe.py  npe_from_sbi.py  tsnpe.py
mf_npe/plot/: method_performance.py  plot_gaussprocess.py  plot_switch.py  plot_traces.py
mf_npe/simulator/: Prior.py  setup_for_tasks.py
mf_npe/simulator/task1/: GaussianSamples.py  OUprocess.py  OUprocessNoise.py  OUprocessTshift.py  OUprocessXinverse.py  OUprocessXinverseNoise.py
mf_npe/utils/: calculate_error.py  load_from_eval.py  mf_abc.py  mmd.py  mutual_info.py  prior_settings.py  task_setup.py  true_posterior.py  tsne.py  utils.py
plot_figures/: Appendix_MF-ABC.py  Appendix_histogram.py  Appendix_mmd_wass_evaluation.py  Appendix_transferlearning_OUnoise.py  Figure_MethodComparison.py  Figure_cost.py  Figure_resolution.py
(+143 files in other folders)
